--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/Index.cshtml
@@ -13,17 +13,23 @@
 
 <html>
 <head>
+    <script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
+    <script src="~/assets/js/pages/ui/notifications.js"></script>
     <script type="text/javascript">
-
-    function OnBeginGridCallback(s, e) {
-        e.customArgs = MVCxClientUtils.GetSerializedEditorValuesInContainer("options");
-    }
-    $(document).ready(function () {
-        $('#btnSave').click(function () {
-            debugger;
-            GridView.UpdateEdit();
+        function OnBeginGridCallback(s, e) {
+            e.customArgs = MVCxClientUtils.GetSerializedEditorValuesInContainer("options");
+        }
+        $(document).ready(function () {
+            $('#btnSave').click(function () {
+                debugger;
+                GridView.UpdateEdit();
+            });
         });
-    });
+        var mensaje = '@ViewBag.Msj';
+        var tipo = '@ViewBag.Tipo';
+        if (mensaje != '') {
+            $(window).on("load", showNotification(tipo, mensaje, 'top', 'center', '', ''));
+        }
     </script>
 </head>
 <body>
@@ -78,39 +84,41 @@
                                     <div class="row clearfix">
                                         <div class="col-sm-2">
                                             <b>No Cliente:</b>
-                                            @Html.TextBoxFor(m => m[0].IdCliente, new { @class = "form-control"})
-                                        </div>
-                                        <div class="col-sm-2" style="top:20px">
-                                           @Html.DevExpress().DateEdit(settings =>
-                                                       {
-                                                           settings.Name = "FechaRango1";
-                                                           settings.Properties.UseMaskBehavior = true;
-                                                           settings.Properties.EditFormat = EditFormat.Custom;
-                                                           settings.Theme = "Moderno";
-                                                           settings.Properties.CalendarProperties.Style.CssClass = "CalendarWidthClass";
-                                                           settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                                           settings.Date = DateTime.Now;
-                                                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                                                           settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
-                                                       }).GetHtml()
+                                            @*@Html.TextBoxFor(m => m[0].IdCliente, new { @class = "form-control" })*@
+                                            <input type="text" name="IdCliente" class = "form-control" placeholder="No del cliente" />
                                         </div>
                                         <div class="col-sm-2" style="top:20px">
                                             @Html.DevExpress().DateEdit(settings =>
-                                                       {
-                                                           settings.Name = "FechaRango2";
-                                                           settings.Properties.UseMaskBehavior = true;
-                                                           settings.Properties.EditFormat = EditFormat.Custom;
-                                                           settings.Theme = "Moderno";
-                                                           settings.Properties.CalendarProperties.Style.CssClass = "CalendarWidthClass";
-                                                           settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                                           settings.Date = DateTime.Now;
-                                                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                                                           settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
-                                                       }).GetHtml()
+                                      {
+                                          settings.Name = "FechaRango1";
+                                          settings.Properties.UseMaskBehavior = true;
+                                          settings.Properties.EditFormat = EditFormat.Custom;
+                                          settings.Theme = "Moderno";
+                                          settings.Properties.CalendarProperties.Style.CssClass = "CalendarWidthClass";
+                                          settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                          settings.Attributes.Clear();
+                                          settings.Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                                          settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
+                                      }).GetHtml()
+                                        </div>
+                                        <div class="col-sm-2" style="top:20px">
+                                            @Html.DevExpress().DateEdit(settings =>
+                                       {
+                                           settings.Name = "FechaRango2";
+                                           settings.Properties.UseMaskBehavior = true;
+                                           settings.Properties.EditFormat = EditFormat.Custom;
+                                           settings.Theme = "Moderno";
+                                           settings.Properties.CalendarProperties.Style.CssClass = "CalendarWidthClass";
+                                           settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                           settings.Attributes.Clear();
+                                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                                           settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
+                                       }).GetHtml()
                                         </div>
                                         <div class="col-sm-3">
                                             <b>RFC:</b>
-                                            @Html.TextBoxFor(m => m[0].Rfc, new { @class = "form-control", placeholder = "RFC del cliente" })
+                                            @Html.TextBoxFor(m => m[0].Rfc, new { @class = "form-control", @placeholder = "RFC del cliente" })
+                                            <input type="text" name="Rfc" hidden/>
                                         </div>
                                         <div class="col-sm-3" style="top:10px">
                                             <div class="form-group">
@@ -136,11 +144,11 @@
                                     </div>
                                 </div>
                             }
-                            <div class="row clearfix blockquote blockquote-info btn-round">                             
-                                    <div class="table-responsive">
-                                        @*@Html.Partial("_AbonosPartial", Model )*@
-                                        @Html.Action("AbonosPartial")
-                                    </div>                            
+                            <div class="row clearfix blockquote blockquote-info btn-round">
+                                <div class="table-responsive">
+                                    @*@Html.Partial("_AbonosPartial", Model )*@
+                                    @Html.Action("AbonosPartial")
+                                </div>
                             </div>
                         </div>
                     </div>
