--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CreditoRecuperado.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CreditoRecuperado.cshtml
@@ -13,7 +13,6 @@
 
 <html>
 <head>
-
 </head>
 <body>
     @using (Html.BeginForm("BuscarCredito", "Cobranza", FormMethod.Post))
@@ -45,16 +44,16 @@
                                             <div>
                                                 @if (ViewBag.EsAdmin)
                                                 {
-                                                    <select id="empresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
-                                                        @foreach (var lst in ViewBag.Empresas)
+                                                <select id="empresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
+                                                    @foreach (var lst in ViewBag.Empresas)
                                                         {
-                                                            <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                                    <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
                                                         }
-                                                    </select>
+                                                </select>
                                                 }
                                                 else
                                                 {
-                                                    @ViewBag.Empresas
+                                                @ViewBag.Empresas
                                                 }
                                             </div>
                                         </div>
@@ -67,11 +66,13 @@
                                     <div class="row clearfix">
                                         <div class="col-sm-2">
                                             <b>No Cliente:</b>
-                                            @Html.TextBoxFor(m => m[0].IdCliente, new { @class = "form-control" })
+                                            <input type="text" name="IdCliente" class="form-control" placeholder="No del cliente" />
                                         </div>
                                         <div class="col-sm-3">
                                             <b>Ticket:</b>
-                                            @Html.TextBoxFor(m => m[0].Rfc, new { @class = "form-control", placeholder = "Número de ticket" })
+                                            @*@Html.TextBoxFor(m => m[0].Rfc, new { @class = "form-control", placeholder = "Número de ticket" })*@
+                                            <input type="text" name="Ticket" class="form-control" placeholder="No de ticket" />
+
                                         </div>
                                         <div class="col-sm-2" style="top:20px">
                                             @Html.DevExpress().DateEdit(settings =>
@@ -82,7 +83,7 @@
                                                            settings.Theme = "Moderno";
                                                            settings.Properties.CalendarProperties.Style.CssClass = "CalendarWidthClass";
                                                            settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                                           settings.Date = DateTime.Now;
+                                                           settings.Attributes.Clear();
                                                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(80);
                                                            settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
                                                        }).GetHtml()
@@ -96,7 +97,7 @@
                                                            settings.Theme = "Moderno";
                                                            settings.Properties.CalendarProperties.Style.CssClass = "CalendarWidthClass";
                                                            settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                                           settings.Date = DateTime.Now;
+                                                           settings.Attributes.Clear();
                                                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(80);
                                                            settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
                                                        }).GetHtml()
@@ -128,8 +129,6 @@
                             }
                             <div class="row clearfix blockquote blockquote-info btn-round">
                                 <div class="table-responsive">
-                                    @*<div class="col-lg-12 col-md-12 col-sm-12 blockquote blockquote-info btn-round">
-                                        <div class="table-responsive">*@
                                     <table class="table table-striped table-hover">
                                         <thead>
                                             <tr>
@@ -146,26 +145,25 @@
                                             {
                                                 foreach (var item in Model)
                                                 {
-                                                    <tr>
-                                                        <td>@item.Ticket</td>
-                                                        <td>@item.FechaRegistro</td>
-                                                        <td>@item.FechaRegistro</td>@*<td>@item.Abonos.FechaAbono</td>*@
-                                                        <td>@item.Cliente</td>
-                                                        <td>@item.TotalCargo</td>
-                                                        <td>@item.TotalCargo</td>@*<td>@item.Abonos.MetodoPago</td>*@
-                                                    </tr>
+                                                    foreach (var x in item.lstCreditoR)
+                                                    {
+                                                        <tr>
+                                                            <td>@item.Ticket</td>
+                                                            <td>@item.FechaRegistro</td>
+                                                            <td>@x.FechaAbono</td>
+                                                            <td>@item.Cliente</td>
+                                                            <td>@x.MontoAbono</td>
+                                                            <td>@x.FormaPago</td>
+                                                        </tr>
+                                                    }
                                                 }
                                             }
                                         </tbody>
                                     </table>
-                                    @*</div>
-                                        </div>*@
                                 </div>
                             </div>
                             <div class="row clearfix blockquote blockquote-info btn-round">
                                 <div class="table-responsive">
-                                    @*<div class="col-lg-12 col-md-12 col-sm-12 blockquote blockquote-info btn-round">
-                                        <div class="table-responsive">*@
                                     <table class="table table-striped table-hover">
                                         <thead>
                                             <tr>
@@ -176,27 +174,25 @@
                                         <tbody>
                                             @if (Model != null)
                                             {
-                                                <tr>
-                                                    <td>Total Efectivo</td>
-                                                    <td>@Model[0].TotalEfectivo</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Total Cheques</td>
-                                                    <td>@Model[0].TotalCheques</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Total Transferencia</td>
-                                                    <td>@Model[0].TotalTransferencia</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Total </td>
-                                                    <td>@Model[0].Total</td>
-                                                </tr>
+                                            <tr>
+                                                <td>Total Efectivo</td>
+                                                <td>@Model[0].TotalEfectivo</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Total Cheques</td>
+                                                <td>@Model[0].TotalCheques</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Total Transferencia</td>
+                                                <td>@Model[0].TotalTransferencia</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Total </td>
+                                                <td>@Model[0].Total</td>
+                                            </tr>
                                             }
                                         </tbody>
                                     </table>
-                                    @*</div>
-                                        </div>*@
                                 </div>
                             </div>
 
