--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/Index.cshtml
@@ -16,9 +16,10 @@
     <script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
     <script src="~/assets/js/pages/ui/notifications.js"></script>
     <script type="text/javascript">
-        function OnBeginGridCallback(s, e) {
-            e.customArgs = MVCxClientUtils.GetSerializedEditorValuesInContainer("options");
-        }
+              
+    function onBeginCallback(s, e) {
+        e.customArgs["editMode"] = editMode.GetValue();
+    }
         $(document).ready(function () {
             $('#btnSave').click(function () {
                 debugger;
@@ -85,7 +86,7 @@
                                         <div class="col-sm-2">
                                             <b>No Cliente:</b>
                                             @*@Html.TextBoxFor(m => m[0].IdCliente, new { @class = "form-control" })*@
-                                            <input type="text" name="IdCliente" class = "form-control" placeholder="No del cliente" />
+                                            <input type="text" name="IdCliente" class="form-control" placeholder="No del cliente" />
                                         </div>
                                         <div class="col-sm-2" style="top:20px">
                                             @Html.DevExpress().DateEdit(settings =>
@@ -117,8 +118,8 @@
                                         </div>
                                         <div class="col-sm-3">
                                             <b>RFC:</b>
-                                            @Html.TextBoxFor(m => m[0].Rfc, new { @class = "form-control", @placeholder = "RFC del cliente" })
-                                            <input type="text" name="Rfc" hidden/>
+                                            @*@Html.TextBoxFor(m => m[0].Rfc, new { @class = "form-control", @placeholder = "RFC del cliente"})*@
+                                            <input type="text" name="Rfc" class="form-control" placeholder="RFC del cliente"/>
                                         </div>
                                         <div class="col-sm-3" style="top:10px">
                                             <div class="form-group">
@@ -146,15 +147,13 @@
                             }
                             <div class="row clearfix blockquote blockquote-info btn-round">
                                 <div class="table-responsive">
-                                    @*@Html.Partial("_AbonosPartial", Model )*@
-                                    @Html.Action("AbonosPartial")
+                                    @Html.Partial("_AbonosPartial", Model )
+                                    @*@Html.Action("AbonosPartial")*@
                                 </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
-
             </div>
         </section>
     }
